--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # DEPENDENCIES
 # ==================================
 node_modules/
+package-lock.json
 
 # ==================================
 # ENVIRONMENT FILES
@@ -9,6 +10,8 @@ node_modules/
 .env
 .env.local
 .env.*.local
+backend/.env
+frontend/.env
 
 # ==================================
 # LOGS
@@ -22,24 +25,11 @@ npm-debug.log*
 # ==================================
 .DS_Store
 Thumbs.db
-
-# ==================================
-# IDE/EDITOR
-# ==================================
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
+.idea
+.vscode
 
 # ==================================
 # BUILD OUTPUT
 # ==================================
 dist/
 build/
-
-# ==================================
-# MISC
-# ==================================
-coverage/
-.nyc_output/
